# smart-contracts

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CANARY.txt  LESSONS.md  Makefile  PREREGISTRATION.md  README.md  STRATEGY.md  foundry.toml  pricing.json  pyproject.toml
baselines/: run_mythril.sh  run_semgrep.sh  run_slither.sh
dataset/: README.md
dataset/A_classics/orig/20230224_efvault/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20230514_selltoken/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20230723_mintofinance/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231112_mev_0x8c2d/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231112_mev_0xa247/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231129_ais/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231130_carolprotocol/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231209_bct/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/A_classics/orig/20231211_goodcompound/: contract.sol  metadata.json  reference_exploit.t.sol
dataset/schema/: metadata.schema.json
grading/: auto_grade.py
harness/: agent_loop.py  schema.py  single_shot.py
harness/prompts/: system_primary.md  system_shadow.md
runners/: base.py  claude.py  gemini.py  local_mlx.py  openai.py
tools/: fetch_pricing.py  import_defihacklabs.py
(+33 files in other folders)
