[project]
name = "smart-contract-llm-benchmark"
version = "0.1.0"
description = "EVM smart contract LLM exploit-synthesis benchmark"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "jsonschema>=4.21.0",
    "pydantic>=2.6.0",
    "tenacity>=8.2.0",
    "rich>=13.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
local = [
    "mlx-lm>=0.20.0",
    "llama-cpp-python>=0.3.0",
]
analysis = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness*", "runners*", "grading*", "analysis*"]
